--- a/deconz-philips-hue-dimmer-switch-custom-actions.yaml
+++ b/deconz-philips-hue-dimmer-switch-custom-actions.yaml
@@ -52,22 +52,22 @@ action:
 - variables:
     event: '{{ trigger.event.data.event }}'
 - choose:
-  - conditions:
-    - '{{ event == 1000 }}'
-    sequence:
-    - choose:
-      - conditions: '{{ force_brightness }}'
-        sequence:
-        - service: light.turn_on
-          target: !input 'light'
-          data:
-            transition: 1
-            brightness_pct: !input 'brightness'
-      default:
-      - service: light.turn_on
-        target: !input 'light'
-        data:
-          transition: 1
+#  - conditions:
+#    - '{{ event == 1000 }}'
+#    sequence:
+#    - choose:
+#      - conditions: '{{ force_brightness }}'
+#        sequence:
+#        - service: light.turn_on
+#          target: !input 'light'
+#          data:
+#            transition: 1
+#            brightness_pct: !input 'brightness'
+#      default:
+#      - service: light.turn_on
+#        target: !input 'light'
+#        data:
+#          transition: 1
   - conditions:
     - '{{ event == 4000 }}'
     sequence:
